[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Menus/GammaChanger.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Fires/FireLight.tscn" type="PackedScene" id=3]
[ext_resource path="res://Materials/Billboard.tres" type="Material" id=4]
[ext_resource path="res://Sprites/Godot_icon.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Prompt.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Settings" ]

[sub_resource type="SpatialMaterial" id=4]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 0.226563, 0.226563, 0.226563, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = true
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo", "NormalMap", "UV1", "UV2" ]

[sub_resource type="PlaneMesh" id=5]

material = SubResource( 4 )
custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector2( 130, 90 )
subdivide_width = 0
subdivide_depth = 0

[node name="GammaChanger" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="Camera" parent="." index="0" instance=ExtResource( 2 )]

[node name="FireLight" parent="." index="1" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1 )
light_energy = 1.3
light_indirect_energy = 1.0
light_cull_mask = -1

[node name="Close" type="Sprite3D" parent="." index="2"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -5 )
layers = 1
material_override = ExtResource( 4 )
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
centered = true
offset = Vector2( 0, 0 )
flip_h = false
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.002
axis = 2
transparent = true
shaded = false
double_sided = true
alpha_cut = 0
texture = ExtResource( 5 )
vframes = 1
hframes = 1
frame = 0
region_enabled = false
region_rect = Rect2( 0, 0, 0, 0 )
_sections_unfolded = [ "Geometry", "Transform" ]

[node name="Medium" type="Sprite3D" parent="." index="3"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -11.5 )
layers = 1
material_override = ExtResource( 4 )
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
centered = true
offset = Vector2( 0, 0 )
flip_h = false
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.0035
axis = 2
transparent = true
shaded = false
double_sided = true
alpha_cut = 0
texture = ExtResource( 5 )
vframes = 1
hframes = 1
frame = 0
region_enabled = false
region_rect = Rect2( 0, 0, 0, 0 )
_sections_unfolded = [ "Geometry", "Transform" ]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="4"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Label" type="Label" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 50.0
margin_right = -20.0
margin_bottom = 167.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Adjust the sliders until you can barely see the left object, and can clearly see the right object."
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="ContrastContainer" type="Container" parent="CanvasLayer" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_top = 900.0
margin_right = 1600.0
margin_bottom = 1009.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="ContrastLabel" type="Label" parent="CanvasLayer/ContrastContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 31.0
margin_right = 204.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Contrast"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ContrastSlider" type="HSlider" parent="CanvasLayer/ContrastContainer" index="1"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -489.0
margin_top = -107.0
margin_right = -189.0
margin_bottom = -77.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.8
max_value = 1.2
step = 0.01
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
tick_count = 3
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "Margin", "Rect" ]

[node name="BrightnessContainer" type="Container" parent="CanvasLayer" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_top = 750.0
margin_right = 1600.0
margin_bottom = 859.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="BrightnessLabel" type="Label" parent="CanvasLayer/BrightnessContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -35.0
margin_top = 31.0
margin_right = 206.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Brightness"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="BrightnessSlider" type="HSlider" parent="CanvasLayer/BrightnessContainer" index="1"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -489.0
margin_top = -109.0
margin_right = -189.0
margin_bottom = -79.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 2.0
step = 0.1
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
tick_count = 3
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "Margin", "Rect" ]

[node name="DoneButton" type="Button" parent="CanvasLayer" index="3"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -100.0
margin_right = -50.0
margin_bottom = -50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Done"
flat = false
align = 1
_sections_unfolded = [ "Margin" ]

[node name="MeshInstance" type="MeshInstance" parent="." index="5"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 5 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[connection signal="value_changed" from="CanvasLayer/ContrastContainer/ContrastSlider" to="." method="_on_ContrastSlider_value_changed"]

[connection signal="value_changed" from="CanvasLayer/BrightnessContainer/BrightnessSlider" to="." method="_on_Brightness_value_changed"]

[connection signal="button_up" from="CanvasLayer/DoneButton" to="." method="_on_DoneButton_button_up"]


